# 2026-Compass-Vitals-Agent

./: .gitignore
_bmad-output/implementation-artifacts/: ai-agent-system-blueprint.md
_bmad-output/planning-artifacts/: architecture.md  prd.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: agent-implementation-playbook.md  service-3-access-to-care-247-high-level-flow.md
services/ai-agent-service/: docker-compose.yml  pyproject.toml
services/ai-agent-service/app/: config.py  main.py
services/ai-agent-service/app/agents/: intake_agent.py  state.py
services/ai-agent-service/app/agents/prompts/: intake_prompt.py
services/ai-agent-service/app/agents/tools/: emergency_detector.py
services/ai-agent-service/app/api/v1/routes/: chat.py
services/ai-agent-service/app/api/v1/schemas/: chat.py
services/ai-agent-service/app/core/: exceptions.py
services/ai-agent-service/app/domain/models/: agent_session.py  base.py  cultural_expression.py  phi_mapping.py  screening_result.py
services/ai-agent-service/app/domain/services/: llm_gateway.py  phi_deidentifier.py
services/ai-agent-service/app/nlp/: code_switcher.py  cultural_mapper.py  medical_terminology.py
services/ai-agent-service/app/static/: chat.html
services/ai-agent-service/tests/unit/: test_code_switcher.py  test_cultural_mapper.py  test_emergency_detector.py  test_intake_agent.py  test_llm_gateway.py  test_phi_deidentifier.py
(+1 files in other folders)
